--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,3 +6,14 @@
     box-sizing: border-box;
     font-family: 'Chakra Petch', sans-serif;
 }
+
+body {
+    background: #2a2b2a;
+}
+
+.btn-start {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+}
