--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,3 +17,15 @@ body {
     top: 50%;
     left: 50%;
 }
+
+.btn-start button{
+    font-size: 20px;
+    font-weight: 400;
+    color: #4fd821;
+    padding: 15px 40px;
+    background: black;
+    cursor: pointer;
+    border: 1.5px solid #4fd821;
+    border-radius: 15px;
+
+}
