--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,8 +12,7 @@ body {
     color:#4fd821
 }
 
-.btn-start,
-.guide-box {
+.btn-start, .guide-box {
     position: absolute;
     transform: translate(-50%, -50%);
     top: 50%;
@@ -84,6 +83,23 @@ body {
     border-radius: 10px;
     color:#4fd821;
     font-weight: 600;
+    transition: all 0.2s ease;
     font-size: 15px;
 
+}
+
+.buttons button.exit {
+    color: red;
+    border: 2px solid red;
+}
+
+.buttons button.restart:hover{
+    background:#47b124;
+    border:3px solid #47b124;
+    color:white;
+}
+.buttons button.exit:hover{
+    background:rgb(196, 19, 19);
+    border:3px solid rgb(196, 19, 19);
+    color:white;
 }
