--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ body {
 }
 
 .btn-start button{
-    font-family:'Source Code Pro';
+    font-family:'Source Code Pro', sans-serif;
     font-size: 20px;
     font-weight: 400;
     color: #4fd821;
@@ -48,8 +48,29 @@ body {
     justify-content: space-around;
     border-radius: 10px 10px 0 0;
     background:#111111;
-    
+}
+.game-area header #game-title {
+    width: 250px;
+    height: 55px;
+    background:#2a2b2a;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Source Code Pro', sans-serif;
+    font-size: 20px;
+    font-weight: 500;
 
+}
+.game-area header #time {
+    height: 55px;
+    width: 250px;
+    padding: 0 10px;
+    border-radius: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: #2a2b2a;
+    border: 2.5px solid #4fd821;
 }
 
 .guide-box {
@@ -57,7 +78,6 @@ body {
     background:#111111;
     border-radius: 15px;
     display: none;
-
 }
 
 .guide-box .guide-title {
