--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,13 +75,27 @@ body {
     background: #2a2b2a;
     border: 2.5px solid #4fd821;
 }
+
 .game-area header #time #timer-icon {
+    user-select: none;
     font-size: 20px;
     font-weight: 700;
     color: white;
+}
+.game-area header #time #timer-count {
+    user-select: none;
+    font-size: 20px;
+    font-weight: 700;
+    color: white;
+    background: #111111;
+    height: 35px;
+    width: 35px;
+    line-height: 35px;
+    text-align: center;
+    border-radius: 50%;
+    border: 2.5px solid white;
     
 }
-
 
 .guide-box {
     width: 700px;
