--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,8 +8,25 @@
 }
 
 body {
-    background: #2a2b2a;
-    color:#4fd821
+    background: linear-gradient(-45deg, #48c0ac, #73a128, #adadad, #23d5ab);
+	background-size: 400% 400%;
+	animation: gradient 30s ease infinite;
+	height: 100vh;
+    color:#4fd821;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+
+    
 }
 
 .btn-start, .guide-box, .game-area {
@@ -94,7 +111,16 @@ body {
     text-align: center;
     border-radius: 50%;
     border: 2.5px solid white;
-    
+}
+.game-area section {
+    padding: 30px;
+    background:#2a2b2a;
+}
+.game-area section #question-display {
+    font-size: 30px;
+    font-weight: 700;
+    color: white;
+    padding: 10px;
 }
 
 .guide-box {
