--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,6 +187,21 @@ body {
     padding: 5px;   
 }
 
+.game-area footer #question-count span {
+    user-select: none;
+    display: flex;
+    font-family: 'Source Code Pro', sans-serif;
+    font-size: large;
+}
+
+footer #question-count span p {
+    color: white;
+    padding: 0 6px;
+    font-weight: 600;
+    font-size: large;
+}
+
+
 /* guide box styles */
 .guide-box {
     width: 700px;
