Add hover styles to start button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@ body {
 }
 
 /* start button styles */
-.btn-start button{
+.btn-start button {
     font-family:'Source Code Pro', sans-serif;
     font-size: 20px;
     font-weight: 400;
@@ -50,7 +50,14 @@ body {
     cursor: pointer;
     border: 2px solid #4fd821;
     border-radius: 15px;
-
+}
+.btn-start button:hover {
+    transition: 0.5s ease;
+    background: linear-gradient(90deg, var(--c1, #4fd821), var(--c2, #2a2b2a) 51%, var(--c1, #000000)) var(--x, 0)/ 200%;
+    color: white;
+    text-shadow: 0px 0px 10px rgba(0,0,0,0.2);
+    box-shadow: 0 0 20px #eee;
+    border: 2.5px solid white;
 }
 
 /* game area styles */
@@ -59,6 +66,7 @@ body {
     background:#111111;
     border-radius: 15px;
     border: 2px solid #4fd821;
+    display:none;
 }
 
 .game-area header {
@@ -174,7 +182,7 @@ body {
 }
 
 .game-area section #answer-select:last-child {
-    margin-bottom: 5px;
+    margin-bottom: 3px;
 }
 
 /* game area footer styles */
@@ -200,6 +208,8 @@ footer #question-count span p {
     font-weight: 600;
     font-size: large;
 }
+
+/* next button */
 footer #next-q-button {
     cursor: pointer;
     background: #2a2b2a;
