--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ body {
     
 }
 
-.btn-start, .guide-box, .game-area {
+.btn-start, .guide-box, .game-area, .final-score{
     position: absolute;
     transform: translate(-50%, -50%);
     top: 50%;
@@ -310,4 +310,27 @@ footer #next-q-button:hover {
     background:rgb(196, 19, 19);
     border:3px solid rgb(196, 19, 19);
     color:white;
+}
+
+.final-score {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: 500px;
+    background:#111111;
+    justify-content: space-between;
+    border-radius: 15px;
+    border: 3px solid #4fd821;
+    padding: 30px 55px;
+}
+
+.final-score #finish-icon {
+    color:white;
+    margin: 10px 10px;
+    font-size: 95px;
+}
+.final-score #finish-icon span {
+    color:palevioletred;
+    font-size: 80px;
 }
