--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,7 @@ body {
 }
 
 .btn-start, .guide-box, .game-area, .final-score{
+    transition: all 0.5s ease;
     position: absolute;
     transform: translate(-50%, -50%);
     top: 50%;
@@ -71,6 +72,12 @@ body {
     pointer-events: none;
     transform: translate(-50%, -50%);
     box-shadow: 0 0 20px #4fd821;
+}
+.game-area.showGame{
+    pointer-events: auto;
+    opacity: 1;
+    z-index: 5;
+    transform: translate(-50%, -50%);
 }
 
 .game-area header {
