--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -220,11 +220,19 @@ body {
 .game-area footer {
     display: flex;
     justify-content: space-evenly;
-    height: 70px;
+    height: 120px;
     width: 100%;
     align-items: center;
-    padding: 5px;   
-    border-top: #4fd821;
+    padding: 0px;   
+    border-top: 1.5px solid white;
+}
+.game-area footer .progress-bar {
+    position:absolute;
+    bottom: 120px;
+    left: 0px;
+    width: 50%;
+    height: 6px;
+    background: #4fd821;
 }
 
 .game-area footer #question-count span {
@@ -249,9 +257,9 @@ footer #next-q-button {
     justify-content: space-between;
     align-items: center;
     font-size: 20px;
-    font-weight: 500;
+    font-weight: 600;
     transition: all 0.5s ease;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
     border-radius: 15px;
     border: 2.5px solid white;
     color:white;
