--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,7 +73,9 @@ body {
     transform: translate(-50%, -50%);
     box-shadow: 0 0 20px #4fd821;
 }
-.game-area.showGame{
+.game-area.showGame,
+.guide-box.showBox,
+.final-score.showScore{
     pointer-events: auto;
     opacity: 1;
     z-index: 5;
